# ipupd

./: .gitignore  Cargo.toml  README.md  example_config.toml  flake.nix  shell.nix
.github/workflows/: release.yml  rust.yml
extra/: config.toml
extra/systemd/: dyndns.service  dyndns.timer
src/: config.rs  error.rs  ip_addrs.rs  ipaddrs.rs  main.rs  update.rs
