[package]
name = "ipupd"
version = "0.1.1"
authors = ["Julian Theis <julian.theis@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
getopts = "0.2"
pnet = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ureq = "2.1"

