[package]
name = "ipupd"
version = "0.3.0"
authors = ["jvytee <jvytee@posteo.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
getopts = "0.2"
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ureq = "2.8"

[profile.release]
strip = true
